Fix lazyload image loading
This circumvents an issue where lazyload would sometimes be called before the list had populated by adding a function that uses javascript promises to let moode know when an element exists, i.e. $.ensure(this).then(that).

It also:

#1 checks if the view is active before calling lazylode (looking at you playlist & radio)

#2 checks to see if lazyload has already been called and if so skips the actual lazyload call.

#3 allows a call to force lazyload to run anyway (e.g. for typedown search)

#4 allows setting skip_invisible (e.g. for typedown search)

#5 switch radio & playlist to use innerHTML like the two library lists

#6 adds an id to the play queue list markup to facilitate #5

#6 fixes a bug in renderui with the default cover image (was missing a '" ' at the end of the src.

#7 limits MPD.json['date'] to 4 characters which should maybe be done in the php but whatever

#8 adjusts the mobile playbar title text a little: slighty larger, shifted to the left a little.

#9 remove placeholder graphic from lazyload library, sets skip_invisible back to original default value of false and comments out srcset stuff we don't use.

--- a/www/css/moode.css
+++ b/www/css/moode.css
@@ -251,7 +251,7 @@ li.modal-dropdown-text:focus {color:#eee;}
 	.playlist span {margin-left:calc(3.8rem + 1vmin) !important;}
 	.playlist {padding:0 0 9rem 0;min-height:33vh;}
 	/*.playlist li:before {width:1.75em!important;}*/
-	.playlist .pl-action, .playlist .db-action a {padding:.4em 1.25em 1em 0;}
+	.playlist .pl-action, .playlist .db-action a {padding:.4em 1.25em 1em 0;margin-left:1.25em!important;}
 	.ui-pnotify {top:40% !important;}
 	#lib-albumcover {left:0;}
 	/* ellipsis madness */
@@ -277,7 +277,7 @@ li.modal-dropdown-text:focus {color:#eee;}
 	/* playbar */
 	#playbar-div {display:block;}
 	#playbar-mtime {display:flex;position:relative;}
-	#playbar-title {text-align:left;top:0;margin-left:1.25rem;width:53vw;height:auto;position:relative;transform:none;font-size:1.3em;line-height:2.2em;left:0;padding:0;text-shadow:0 0 1px var(--btnbarback);}
+	#playbar-title {text-align:left;top:0;margin-left:1em;width:53vw;height:auto;position:relative;transform:none;font-size:1.4em;line-height:2.2em;left:0;padding:0;text-shadow:0 0 1px var(--btnbarback);}
 	#playbar-controls {right:.25rem;transform:none;top:0;left:unset;opacity:1;}
 	#playbar-time, #playbar-total {line-height:1.5rem;}
 	#playbar-controls .btn {padding:.5em;font-size:2.5rem;-webkit-tap-highlight-color:transparent;}
